GNOME Bugzilla – Bug 736939
gl: logical disjunction consecutive return, break statements
Last modified: 2014-09-22 06:19:14 UTC
Created attachment 286560 [details] [review] gl: logical disjunction consecutive return, break statements gl: logical disjunction consecutive return, break statements
Review of attachment 286560 [details] [review]: One issue :) ::: gst-libs/gst/gl/gstglfilter.c @@ -225,3 @@ && gst_base_transform_is_passthrough (trans)) return gst_pad_peer_query (GST_BASE_TRANSFORM_SRC_PAD (trans), query); - break; This will fallthrough to the GST_QUERY_CONTEXT case when not in passthrough mode.
Created attachment 286596 [details] [review] gl: logical disjunction consecutive return, break statements thanks for the review made changes as suggested. please review.
Ah, you might want to merge the two patches together :)
Its on your discretion :) If you want I can make a single one too but it will be wastage time in that case :)
Please make a single patch.
Created attachment 286768 [details] [review] gl: logical disjunction consecutive return, break statements Merged both the patches together to single one as suggested. Please review. Thanks.
Review of attachment 286768 [details] [review]: That's not the result of a merge of those two patches. It should simply be the removal of the break; in the GST_QUERY_CONTEXT case.
Created attachment 286769 [details] [review] gl: logical disjunction consecutive return, break statements Done as suggested. Thanks
(In reply to comment #8) > Created an attachment (id=286769) [details] [review] > gl: logical disjunction consecutive return, break statements > > Done as suggested. > Thanks That's exactly the same as attachment 286768 [details] [review]
Created attachment 286776 [details] [review] gl: logical disjunction consecutive return, break statements There was some error in my repo so the previous patch was a duplicate one sorry for that. Made changes as suggested please review. Thanks.
commit d153b01280c9d0658e1f66a2a4ff07477c842e8c Author: Anuj Jaiswal <anuj.jaiswal@samsung.com> Date: Mon Sep 22 11:10:42 2014 +0530 gl: consecutive return, break statement Signed-off-by: Anuj Jaiswal <anuj.jaiswal@samsung.com> https://bugzilla.gnome.org/show_bug.cgi?id=736939